Penultimate - finishing reference section, fix formatting